--- a/interview/12.html
+++ b/interview/12.html
@@ -1,7 +1,19 @@
 <script>
-    function A(a,b) {
+    function A(a, b) {
         this.a = a;
         this.b = b;
+    }
+    function create() {
+        // 创建一个空的对象
+        let obj = new Object()
+        // 获得构造函数 第一个参数是原型
+        let Con = [].shift.call(arguments) 
+        // 链接到原型
+        obj.__proto__ = Con.prototype
+        // 绑定 this，执行构造函数
+        let result = Con.apply(obj, arguments)
+        // 确保 new 出来的是个对象 确保对象
+        return typeof result === 'object' ? result : obj
     }
 
     function new1(func, ...args) {
@@ -11,6 +23,6 @@
         return obj;
     }
     const a = new A('a', 'b');
-    const b =  new1(A, 'a', 'b');
+    const b = new1(A, 'a', 'b');
     console.log(a, b);
 </script>
