--- a/interview/24.html
+++ b/interview/24.html
@@ -18,15 +18,18 @@
     });
   };
 
-  promise.prototype.race = function(promises) {
-      return new Promise((resolve, reject) =>{
-          promises.forEach(p=>{
-              p.then(value=>{
-                  resolve(value)
-              }, error=>{
-                  reject(error)
-              })
-          })
-      })
-  }
+  promise.prototype.race = function (promises) {
+    return new Promise((resolve, reject) => {
+      promises.forEach((p) => {
+        p.then(
+          (value) => {
+            resolve(value);
+          },
+          (error) => {
+            reject(error);
+          }
+        );
+      });
+    });
+  };
 </script>
