--- a/interview/15.html
+++ b/interview/15.html
@@ -3,7 +3,17 @@
         display: grid;
         grid-template-columns: 1lr 1lr 1lr;
         grid-template-rows:repeat(3);
-    } */
+    } 
+
+    div div {
+        grid-row-start: 2;
+        grid-row-end: 4;
+        grid-column-start: 2;
+        grid-column-end: 4;
+    }
+    
+    
+    */
 </style>
 <body>
   <div class="root">
