--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webpack</title>
     <style>
-        body {
-            background-color: red;
-        }
+      body {
+        background-color: red;
+      }
     </style>
-</head>
-<body>
-    
+  </head>
+  <body>
     <div>
-        Hello
+      Hello
     </div>
-</body>
+    <img src='./animal.jpg' alt=""/>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+  </body>
 </html>
