--- a/interview/35.html
+++ b/interview/35.html
@@ -83,4 +83,9 @@
     abortFetchBtn.onclick = function () {
         ajax.abortFetch();
     }
+    // let i=0;
+    // while(i<10) {
+    //     ajax.fetch();
+    //     i++;
+    // }
 </script>
